// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GitService tests > should retrieve a commit from a Git repository 1`] = `
"{
  "hash": "<removed for testing>",
  "parent": "<removed for testing>",
  "date": "<removed for testing>",
  "author": {
    "name": "Jackson",
    "email": "jacksondc@users.noreply.github.com"
  },
  "message": "Initial commit",
  "diff": "<diff content>",
  "changedFilesRel": [],
  "changedFiles": []
}"
`;

exports[`GitService tests > should retrieve a commit with files and diff from a Git repository 1`] = `
"{
  "hash": "<removed for testing>",
  "parent": "<removed for testing>",
  "date": "<removed for testing>",
  "author": {
    "name": "Jackson",
    "email": "jacksondc@users.noreply.github.com"
  },
  "message": "Initial commit",
  "diff": "<diff content>",
  "changedFilesRel": [
    "file1.txt"
  ],
  "changedFiles": [
    "file1.txt"
  ]
}"
`;

exports[`GitService tests > should retrieve a commit with files from a Git repository 1`] = `
"{
  "hash": "<removed for testing>",
  "parent": "<removed for testing>",
  "date": "<removed for testing>",
  "author": {
    "name": "Jackson",
    "email": "jacksondc@users.noreply.github.com"
  },
  "message": "Initial commit",
  "diff": "<diff content>",
  "changedFilesRel": [
    "file1.txt"
  ],
  "changedFiles": [
    "file1.txt"
  ]
}"
`;

exports[`GitService tests > should retrieve multiple commits from a Git repository 1`] = `
[
  "{
  "hash": "<removed for testing>",
  "parent": "<removed for testing>",
  "date": "<removed for testing>",
  "author": {
    "name": "Jackson",
    "email": "jacksondc@users.noreply.github.com"
  },
  "message": "First commit",
  "diff": "<diff content>",
  "changedFilesRel": [
    "file1.txt"
  ],
  "changedFiles": [
    "file1.txt"
  ]
}",
  "{
  "hash": "<removed for testing>",
  "parent": "<removed for testing>",
  "date": "<removed for testing>",
  "author": {
    "name": "Jackson",
    "email": "jacksondc@users.noreply.github.com"
  },
  "message": "Second commit",
  "diff": "<diff content>",
  "changedFilesRel": [
    "file2.txt"
  ],
  "changedFiles": [
    "file2.txt"
  ]
}",
  "{
  "hash": "<removed for testing>",
  "parent": "<removed for testing>",
  "date": "<removed for testing>",
  "author": {
    "name": "Jackson",
    "email": "jacksondc@users.noreply.github.com"
  },
  "message": "Last commit",
  "diff": "<diff content>",
  "changedFilesRel": [
    "file3.txt"
  ],
  "changedFiles": [
    "file3.txt"
  ]
}",
]
`;

exports[`GitService tests > should retrieve multiple commits with files and diffs from a Git repository 1`] = `
[
  "{
  "hash": "<removed for testing>",
  "parent": "<removed for testing>",
  "date": "<removed for testing>",
  "author": {
    "name": "Jackson",
    "email": "jacksondc@users.noreply.github.com"
  },
  "message": "First commit",
  "diff": "<diff content>",
  "changedFilesRel": [
    "file1.txt"
  ],
  "changedFiles": [
    "file1.txt"
  ]
}",
  "{
  "hash": "<removed for testing>",
  "parent": "<removed for testing>",
  "date": "<removed for testing>",
  "author": {
    "name": "Jackson",
    "email": "jacksondc@users.noreply.github.com"
  },
  "message": "Second commit",
  "diff": "<diff content>",
  "changedFilesRel": [
    "file2.txt"
  ],
  "changedFiles": [
    "file2.txt"
  ]
}",
  "{
  "hash": "<removed for testing>",
  "parent": "<removed for testing>",
  "date": "<removed for testing>",
  "author": {
    "name": "Jackson",
    "email": "jacksondc@users.noreply.github.com"
  },
  "message": "Last commit",
  "diff": "<diff content>",
  "changedFilesRel": [
    "file3.txt"
  ],
  "changedFiles": [
    "file3.txt"
  ]
}",
]
`;
